# dgraph-js-native

./: .editorconfig  .eslintrc.js  .gitignore  .gitmodules  README.md  package.json
.github/workflows/: linux.yml  macos.yml  publish.yml  windows.yml
lib/: client.d.ts  client.js  client.js.map  errors.d.ts  errors.js  errors.js.map  index.d.ts  index.js  index.js.map  mutate_txn.d.ts  mutate_txn.js  mutate_txn.js.map  query_txn.d.ts  query_txn.js  query_txn.js.map  txn.d.ts  txn.js  txn.js.map
native/: Cargo.toml  index.d.ts
native/src/: lib.rs  test_client.rs
native/src/classes/: client.rs  event.rs  mod.rs  query_txn.rs  response.rs  txn.rs
native/src/js/: client.rs  mod.rs  mutation.rs  operation.rs  response.rs
native/src/js/txn/: best_effort.rs  mod.rs  mutated.rs  read_only.rs
native/src/tasks/: callback.rs  commit.rs  discard.rs  mod.rs  mutate.rs  poll.rs  query.rs  query_with_vars.rs  response.rs
native/src/utils/: mod.rs
src/: client.ts  errors.ts  index.ts  mutate_txn.ts  query_txn.ts  response.ts  txn.ts
