[package]
name = "dgraph-js-native"
version = "0.1.0"
authors = ["Simon Liang <simon@x-tech.io>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "dgraph_js_native"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
