[package]
name = "dgraph-js-native"
version = "0.1.0"
authors = ["Simon Liang <simon@x-tech.io>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[[bin]] # Bin to run the test client
name = "test-client"
path = "src/test_client.rs"

[lib]
name = "dgraph_js_native"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.52"
dgraph-tonic = { git = "https://github.com/xanthous-tech/dgraph-tonic", branch = "expose-traits", features = ["sync"] }
# dgraph-tonic = { version = "0.5.1", features = ["sync"] }
tokio = { version = "0.2", features = ["macros"] }
